2006-05-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (::tkjabber::MsgCB): More polite handling of error
	response when sending private chat messages.
	* tkchat.tcl (::tkjabber::RosterCB): Add a system message to a
	chat window if the chat partner disconnects.

2006-03-21  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::OnNamePopup): The hide/show user
	functionality was wrongly placed on the "User Info" button in the
	context menu.

2006-03-20  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::CreateGUI): Stop excess double-click selection.

	* tkchat.tcl (::tkchat::OnNamePopup): Add One2One menu item.

2006-03-20  Reinhard Max  <max@suse.de>

	* tkchat.tcl (::tkchat::CreateGUI):   Left-justify titles and
	                                      subtitles in the Users
	                                      Online list.

	* tkchat.tcl (::tkchat::OnTextPopup): Use tk_popup instead of the
	(::tkchat::OnNamePopup):              menu's popup subcommand to fix
	                                      unposting on X.

	* tkchat.tcl: (::tkchat::Smile):      New coffe emoticon.

	* tkchat.tcl: (::tkchat::updateOnlineNames): Don't continue the
	                                      active area of clickable
	                                      nick names to the end of the
	                                      line.

2006-03-20  Daniel South  <wildcard_25@users.sourceforge.net>

	* tkchat.tcl (::tkchat::addTraffic): Add IRC and WebChat nicks to the
	(::tkchat::nickComplete):            OnlineUser list. Rename procedure
	(::tkchat::CreateGUI):               '::tkchat::updateJabberNames' to
	(::tkchat::DoVis):                   '::tkchat::updateOnlineNames' as
	(::tkchat::ChangeColors):            it now does more than just Jabber
	(::tkchat::Init):                    names. New procedure
	(::tkjabber::cleanup):               '::tkchat::OnNetworkToggleShow'.
	(::tkjabber::RosterCB):
	(::tkjabber::MsgCB):
	(::tkjabber::parseMsg):